--- a/package.json
+++ b/package.json
@@ -12,10 +12,20 @@
   "dependencies": {
     "expo": "~54.0.23",
     "expo-status-bar": "~3.0.8",
+    "nativewind": "^4.2.1",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-web": "^0.21.0"
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "^0.7.1",
+    "react-native-worklets-core": "^1.6.2",
+    "tailwindcss": "^3.4.19"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-preset-expo": "^54.0.8"
+  }
 }
