--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
       "supportsTablet": true
     },
     "android": {
-      
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/final icon (1).png",
         "backgroundColor": "#ffffff"
