--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-av": "~16.0.8",
     "expo-device": "~8.0.10",
     "expo-status-bar": "~3.0.8",
+    "mathjs": "^15.1.1",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
